add css to home page

--- a/index.html
+++ b/index.html
@@ -4,18 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Boldonse&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Yummy Recipes</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <header>
+        <div class="header-text">
+            <h1>Yummy Recipes</h1>
+            <p>Check out my favorite recipes below!</p>
+        </div>
+    </header>
 
     <ul>
-        <li><a href="./recipes/shrimp-tacos.html">Shrimp Tacos</a></li>
-        <li><a href="./recipes/enchiladas.html">Enchiladas</a></li>
-        <li><a href="./recipes/tinga.html">Tinga</a></li>
+        <li class="holographic-card"><a href="./recipes/enchiladas.html">Enchiladas</a></li>
+        <li class="holographic-card"><a href="./recipes/tinga.html">Tinga</a></li>
+        <li class="holographic-card"><a href="./recipes/shrimp-tacos.html">Shrimp Tacos</a></li>
     </ul>
 
+    <footer>
+        <p>Copyright &#169; 2025 Claudia Barrera</p>
+    </footer>
 </body>
 
 </html>
